--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
 <meta charset="UTF-8">
-<title>欢迎来到风铃俱乐部！</title>
+<title>风铃俱乐部-主页</title>
+<style>
+  body {color:#FFFFFF;}
+</style>
+</head>
+<body>
+  <h1>风铃俱乐部</h1>
+  <h4>欢迎来到风铃俱乐部！</h4>
+  <p>我们的网站目前还在开发中，敬请期待……<p>
 </body>
 </html>
