--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <meta charset="UTF-8">
 <title>风铃俱乐部-主页</title>
 <style>
-  background-image:url('https://c-ssl.dtstatic.com/uploads/item/201810/22/20181022201011_ragcf.thumb.1000_0.jpg');
-  body {color:#FFFFFF;}
+  body {
+    background-image:url('https://c-ssl.dtstatic.com/uploads/item/201810/22/20181022201011_ragcf.thumb.1000_0.jpg');
+    color:#FFFFFF;
+  }
 </style>
 </head>
 <body>
