--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>风铃俱乐部-主页</title>
 <style>
   body {
-    background-image:url('https://c-ssl.dtstatic.com/uploads/item/201810/22/20181022201011_ragcf.thumb.1000_0.jpg');
+    image:url('https://c-ssl.dtstatic.com/uploads/item/201810/22/20181022201011_ragcf.thumb.1000_0.jpg');
     color:#FFFFFF;
   }
 </style>
