--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
   <h1>风铃俱乐部</h1>
   <h4>欢迎来到风铃俱乐部！</h4>
   <p>我们的网站目前还在开发中，敬请期待……<p>
+  <img src="https://loxe04.github.io/lingye-studio/main/8802a4fe576be3ff960c1c8649f44fbb.gif">
 </body>
 </html>
