--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     text-decoration: none;
   }
   li a:hover, .dropdown:hover, .dropbtn {
-    background-color: #000000;
+    background-color: #f1f1f1;
   }
   .dropdown {
     
@@ -52,7 +52,7 @@
 </head>
 <body>
   <ul>
-    <li><a class="active" href="https://loxe04.github.io/">主页</a></li>
+    <li><a class="active" href="https://loxe04.github.io/lingye-studio">主页</a></li>
     <div class="dropdown">
       <a href="#" class="dropbtn">啥也不是</a>
        <div class="dropdown-content">
@@ -60,8 +60,8 @@
      </div>
     </div>
   </ul>
-  <h1>风铃俱乐部</h1>
-  <h4>欢迎来到风铃俱乐部！</h4>
+  <h1>铃曳工作室</h1>
+  <h4>欢迎加入铃曳工作室！</h4>
   <p>我们的网站目前还在开发中，敬请期待……<p>
 </body>
 </html>
