--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     text-decoration: none;
   }
   li a:hover, .dropdown:hover, .dropbtn {
-    background-color: #f1f1f1;
+    background-color: #778899;
   }
   .dropdown {
     
@@ -31,7 +31,7 @@
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   }
@@ -46,7 +46,7 @@
     display: block;
   }
   body {
-    color:#FFFFFF;
+    color:#808080;
   }
 </style>
 </head>
